@@ -26,15 +26,15 @@ dist_glade_DATA = sound-properties.glade
 pixmapdir = $(pkgdatadir)/pixmaps
 dist_pixmap_DATA = visual-bell.png
 
-icons16dir = $(datadir)/icons/hicolor/16x16
+icons16dir = $(datadir)/icons/hicolor/16x16/apps
 dist_icons16_DATA = icons/16x16/gnome-sound-properties.png
-icons22dir = $(datadir)/icons/hicolor/22x22
+icons22dir = $(datadir)/icons/hicolor/22x22/apps
 dist_icons22_DATA = icons/22x22/gnome-sound-properties.png
-icons24dir = $(datadir)/icons/hicolor/24x24
+icons24dir = $(datadir)/icons/hicolor/24x24/apps
 dist_icons24_DATA = icons/24x24/gnome-sound-properties.png
-icons32dir = $(datadir)/icons/hicolor/32x32
+icons32dir = $(datadir)/icons/hicolor/32x32/apps
 dist_icons32_DATA = icons/32x32/gnome-sound-properties.png
-iconssvgdir = $(datadir)/icons/hicolor/scalable
+iconssvgdir = $(datadir)/icons/hicolor/scalable/apps
 dist_iconssvg_DATA = icons/scalable/gnome-sound-properties.svg
 
 desktopdir = $(datadir)/applications
